--- a/GroupMeClientAvalonia/Views/SettingsView.xaml
+++ b/GroupMeClientAvalonia/Views/SettingsView.xaml
@@ -91,9 +91,29 @@
                   IsReadOnly="True"
                   HeadersVisibility="None">
           <DataGrid.Columns>
-            <DataGridTextColumn Header="Plugin" Binding="{Binding Name}" Width="500" />
+            <DataGridTextColumn Header="Plugin" Binding="{Binding Name}" Width="350" />
             <DataGridTextColumn Header="Version" Binding="{Binding Version}" Width="100" />
           </DataGrid.Columns>
+
+          <DataGrid.Styles>
+            <Style Selector="DataGridRow">
+              <Setter Property="Background" Value="{DynamicResource ThemeBackgroundBrush}" />
+            </Style>
+            <Style Selector="DataGridRow /template/ Rectangle#BackgroundRectangle">
+              <Setter Property="Fill" Value="{DynamicResource ThemeBackgroundBrush}" />
+            </Style>
+            <Style Selector="DataGridRow:selected /template/ Rectangle#BackgroundRectangle">
+              <Setter Property="Fill" Value="{DynamicResource ThemeBackgroundBrush}" />
+            </Style>
+
+            <Style Selector="DataGridRowGroupHeader">
+              <Setter Property="FontWeight" Value="SemiBold" />
+              <Setter Property="Background" Value="{DynamicResource ThemeBackgroundBrush}" />
+            </Style>
+            <Style Selector="DataGridRowGroupHeader /template/ ToggleButton#ExpanderButton">
+              <Setter Property="IsVisible" Value="False" />
+            </Style>
+          </DataGrid.Styles>
         </DataGrid>
       </HeaderedContentControl>
 
