--- a/GroupMeClientAvalonia/GroupMeDark.xaml
+++ b/GroupMeClientAvalonia/GroupMeDark.xaml
@@ -3,7 +3,7 @@
        xmlns:sys="clr-namespace:System;assembly=netstandard">
 
   <Style.Resources>
-    <FontFamily x:Key="GroupMeFont">Segoe UI</FontFamily>
+    <FontFamily x:Key="GroupMeFont">avares://GroupMeClientAvalonia/Assets/Fonts/Webly*.ttf#WeblySleek UI</FontFamily>
     
     <Color x:Key="LoadingSpinnerDarkColor">#CC119EDA</Color>
     <Color x:Key="GroupsSidebarFontColor">#637182</Color>
