--- a/GroupMeClientAvalonia/GroupMeLight.xaml
+++ b/GroupMeClientAvalonia/GroupMeLight.xaml
@@ -3,7 +3,8 @@
        xmlns:sys="clr-namespace:System;assembly=netstandard">
 
   <Style.Resources>
-    <FontFamily x:Key="GroupMeFont">Segoe UI</FontFamily>
+    <FontFamily x:Key="GroupMeFont">avares://GroupMeClientAvalonia/Assets/Fonts/Webly*.ttf#WeblySleek UI</FontFamily>
+    <!--<FontFamily x:Key="GroupMeFont">avares://GroupMeClientAvalonia/Assets/Fonts/webly*.ttf#WeblySleek UI Light</FontFamily>-->
     
     <Color x:Key="LoadingSpinnerDarkColor">#CC119EDA</Color>
     <Color x:Key="MenuButtonLightColor">#F7F7F7</Color>
