--- a/GroupMeClientAvalonia/Views/Controls/InlineReadSentMarkerControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/InlineReadSentMarkerControl.xaml
@@ -18,7 +18,7 @@
            HorizontalAlignment="Left"
            FontWeight="Regular"
            FontSize="11"
-           Foreground="#637182"
+           Foreground="{DynamicResource MessageFontBrush}"
            Margin="55,-15,0,0"/>
   </Grid>
 </UserControl>
