--- a/GroupMeClientAvalonia/App.xaml
+++ b/GroupMeClientAvalonia/App.xaml
@@ -1,36 +1,44 @@
 ﻿<Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:GroupMeClientAvalonia"
-             x:Class="GroupMeClientAvalonia.App">
-  <Application.DataTemplates>
-    <local:ViewLocator/>
-  </Application.DataTemplates>
+             x:Class="GroupMeClientAvalonia.App"
+             Name="GroupMe Desktop Client">
 
-  <Application.Resources>
-    <GeometryDrawing x:Key="Ionicons.ArrowDropdownMD" Brush="#FF000000" Geometry="M128 192l128 128 128-128z"   />
-    <GeometryDrawing x:Key="Ionicons.ArrowDropupMD" Brush="#FF000000" Geometry="M128 320l128-128 128 128z"   />
-  </Application.Resources>
+    <Application.DataTemplates>
+        <local:ViewLocator/>
+    </Application.DataTemplates>
 
-  <Application.Styles>
-    <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml"/>
-    <StyleInclude Source="avares://GroupMeClientAvalonia/GroupMeLight.xaml"/>
-    
-    <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
-    <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Default.xaml"/>
-    <StyleInclude Source="avares://MicroCubeAvalonia/DefaultTheme.xaml"/>
+    <NativeMenu.Menu>
+        <NativeMenu>
+            <NativeMenuItem Header="About GroupMe Desktop Client" Command="{Binding AboutCommand}" />
+        </NativeMenu>
+    </NativeMenu.Menu>
 
-    <Style Selector="TextBox.verticalCenter /template/ Panel">
-      <Setter Property="VerticalAlignment" Value="Center"/>
-    </Style>
+    <Application.Resources>
+        <GeometryDrawing x:Key="Ionicons.ArrowDropdownMD" Brush="#FF000000" Geometry="M128 192l128 128 128-128z"   />
+        <GeometryDrawing x:Key="Ionicons.ArrowDropupMD" Brush="#FF000000" Geometry="M128 320l128-128 128 128z"   />
+    </Application.Resources>
 
-    <Style Selector="Button.styleless">
-      <Setter Property="BorderThickness" Value="0"/>
-      <Setter Property="Margin" Value="0" />
-      <Setter Property="Padding" Value="0" />
-    </Style>
+    <Application.Styles>
+        <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml"/>
+        <StyleInclude Source="avares://GroupMeClientAvalonia/GroupMeLight.xaml"/>
 
-    <Style Selector="Button.styleless:pressed /template/ ContentPresenter">
-      <Setter Property="Background" Value="{TemplateBinding Background}"/>
-    </Style>
-  </Application.Styles>
+        <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
+        <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Default.xaml"/>
+        <StyleInclude Source="avares://MicroCubeAvalonia/DefaultTheme.xaml"/>
+
+        <Style Selector="TextBox.verticalCenter /template/ Panel">
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
+
+        <Style Selector="Button.styleless">
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Margin" Value="0" />
+            <Setter Property="Padding" Value="0" />
+        </Style>
+
+        <Style Selector="Button.styleless:pressed /template/ ContentPresenter">
+            <Setter Property="Background" Value="{TemplateBinding Background}"/>
+        </Style>
+    </Application.Styles>
 </Application>
