--- a/GroupMeClientAvalonia/Views/Controls/Attachments/TwitterAttachmentControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/Attachments/TwitterAttachmentControl.xaml
@@ -6,7 +6,7 @@
              xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
              xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
              mc:Ignorable="d" d:DesignWidth="200" d:DesignHeight="100"
-             Background="White">
+             Background="{DynamicResource TweetBackgroundBrush}">
 
   <i:Interaction.Behaviors>
     <ia:EventTriggerBehavior EventName="PointerPressed">
