--- a/GroupMeClientAvalonia/Views/MainWindow.xaml
+++ b/GroupMeClientAvalonia/Views/MainWindow.xaml
@@ -4,6 +4,8 @@
         xmlns:views="clr-namespace:GroupMeClientAvalonia.Views"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
+        xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
         xmlns:controls="clr-namespace:GroupMeClientAvalonuia.Views.Controls"
         xmlns:converters="clr-namespace:GroupMeClientAvalonia.Converters"
         xmlns:microcube="clr-namespace:MicroCubeAvalonia.Controls;assembly=MicroCubeAvalonia"
@@ -30,7 +32,8 @@
                              SelectedItem="{Binding SelectedItem}"
                              SidebarBrush="{DynamicResource SidebarBrush}" 
                              SidebarForeground="White"
-                             HoverHighlightBrush="{DynamicResource SidebarHoverBrush}"/>
+                             HoverHighlightBrush="{DynamicResource SidebarHoverBrush}"
+                             x:Name="hamburgerMenu"/>
 
     <microcube:ProgressRing IsVisible="{Binding IsReconnecting}"
                             Width="20" Height="20"
@@ -41,11 +44,21 @@
     <Button Width="48" Height="48"
             HorizontalAlignment="Left"
             VerticalAlignment="Bottom"
+            HorizontalContentAlignment="Left"
             Padding="0"
             Classes="styleless"
             Background="Transparent"
             Margin="0,0,0,50"
             Command="{Binding RefreshEverythingCommand}">
+
+      <i:Interaction.Behaviors>
+        <ia:DataTriggerBehavior Binding="{Binding #hamburgerMenu.IsPaneOpen}" ComparisonCondition="Equal" Value="True">
+          <ia:ChangePropertyAction PropertyName="Width" Value="240"/>
+        </ia:DataTriggerBehavior>
+        <ia:DataTriggerBehavior Binding="{Binding #hamburgerMenu.IsPaneOpen}" ComparisonCondition="NotEqual" Value="True">
+          <ia:ChangePropertyAction PropertyName="Width" Value="48"/>
+        </ia:DataTriggerBehavior>
+      </i:Interaction.Behaviors>
 
       <Button.Styles>
         <Style Selector="Button:pointerover /template/ ContentPresenter">
@@ -54,14 +67,23 @@
       </Button.Styles>
 
       <Button.Content>
-        <Grid>
+        <Grid ColumnDefinitions="48, *">
           <iconPack:IconControl Kind="PackIconMaterialKind.Refresh"
+                                Grid.Column="0"
                                 Foreground="White"
                                 Width="16" Height="16"
                                 IsVisible="{Binding IsRefreshing, Converter={StaticResource inverseBoolConverter}}"/>
+          
           <microcube:ProgressRing IsVisible="{Binding IsRefreshing}"
+                                  Grid.Column="0"
                                   Width="16" Height="16"
                                   Foreground="White"/>
+
+          <TextBlock Text="Refresh"
+                     Grid.Column="1"
+                     VerticalAlignment="Center"
+                     Foreground="White"
+                     FontSize="16" />
         </Grid>
       </Button.Content>
     </Button>
