--- a/MicroCubeAvalonia/Controls/HamburgerMenu.xaml
+++ b/MicroCubeAvalonia/Controls/HamburgerMenu.xaml
@@ -1,7 +1,5 @@
 ﻿<Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
-        xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
         xmlns:controls="clr-namespace:MicroCubeAvalonia.Controls"
         xmlns:iconPack="clr-namespace:MicroCubeAvalonia.IconPack">
   <Design.PreviewWith>
@@ -23,6 +21,17 @@
             <DockPanel Name="PART_Sidebar"
                        Background="{TemplateBinding SidebarBrush}"
                        DockPanel.Dock="Left">
+
+              <DockPanel.Styles>
+                <Style Selector="controls|HamburgerMenu[IsPaneOpen=True] DockPanel#PART_Sidebar">
+                  <Setter Property="Width" Value="240" />
+                </Style>
+
+                <Style Selector="controls|HamburgerMenu[IsPaneOpen=False] DockPanel#PART_Sidebar">
+                  <Setter Property="Width" Value="48" />
+                </Style>
+              </DockPanel.Styles>
+              
               <ToggleButton Name="PART_HamburgerButton"
                             Width="48" Height="48"
                             IsChecked="{TemplateBinding IsPaneOpen, Mode=TwoWay}"
@@ -50,15 +59,6 @@
 
                 <iconPack:IconControl Kind="PackIconMaterialKind.Menu" Width="22" Height="22" />
               </ToggleButton>
-
-              <i:Interaction.Behaviors>
-                <ia:DataTriggerBehavior Binding="{Binding #PART_HamburgerButton.IsChecked}" ComparisonCondition="Equal" Value="True">
-                  <ia:ChangePropertyAction PropertyName="Width" Value="240"/>
-                </ia:DataTriggerBehavior>
-                <ia:DataTriggerBehavior Binding="{Binding #PART_HamburgerButton.IsChecked}" ComparisonCondition="NotEqual" Value="True">
-                  <ia:ChangePropertyAction PropertyName="Width" Value="48"/>
-                </ia:DataTriggerBehavior>
-              </i:Interaction.Behaviors>
 
               <ListBox Items="{TemplateBinding Items}"
                        Foreground="{TemplateBinding SidebarForeground}"
