Messages and timestamps fully update background colors when changing themes

--- a/GroupMeClientAvalonia/Views/Controls/MessageControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/MessageControl.xaml
@@ -16,7 +16,7 @@
     <converters:IsZeroConverter x:Key="isZeroConverter" />
   </UserControl.Resources>
 
-  <Grid Background="{Binding MessageColor}">
+  <Grid>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="55" />
       <ColumnDefinition Width="*"/>
@@ -28,6 +28,12 @@
       <RowDefinition Height="*" />
       <RowDefinition Height="Auto" />
     </Grid.RowDefinitions>
+
+    <i:Interaction.Behaviors>
+      <extensions:BackgroundBinaryChangerBehavior Condition="{Binding DidISendIt}"
+                                                  TrueValue="{DynamicResource MessageISentBackdropBrush}"
+                                                  FalseValue="{DynamicResource MessageTheySentBackdropBrush}" />
+    </i:Interaction.Behaviors>
 
     <controls:AvatarControl
             Grid.Column="0" Grid.Row="1"
