--- a/GroupMeClientAvalonia/Views/Controls/InlineReadSentMarkerControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/InlineReadSentMarkerControl.xaml
@@ -3,10 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
+             xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
+             xmlns:extensions="clr-namespace:GroupMeClientAvalonia.Extensions"
              mc:Ignorable="d"
              d:DesignHeight="20" d:DesignWidth="400">
 
-  <Grid Background="{Binding MessageColor, Mode=OneTime}">
+  <Grid>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="*"/>
     </Grid.ColumnDefinitions>
@@ -14,6 +17,12 @@
       <RowDefinition Height="*"/>
     </Grid.RowDefinitions>
 
+    <i:Interaction.Behaviors>
+      <extensions:BackgroundBinaryChangerBehavior Condition="{Binding DidISendIt}"
+                                                  TrueValue="{DynamicResource MessageISentBackdropBrush}"
+                                                  FalseValue="{DynamicResource MessageTheySentBackdropBrush}" />
+    </i:Interaction.Behaviors>
+    
     <TextBlock Text="{Binding LabelString, Mode=OneTime}"
            HorizontalAlignment="Left"
            FontWeight="Regular"
