Fix a bug where the sidebar could be scrolled horizontally using a touchpad/touchscreen

--- a/GroupMeClientAvalonia/Views/ChatsView.xaml
+++ b/GroupMeClientAvalonia/Views/ChatsView.xaml
@@ -121,7 +121,8 @@
       <!--All Groups and Chats List-->
       <ScrollViewer Grid.Row="1"
                     VerticalScrollBarVisibility="Visible"
-                    VerticalAlignment="Stretch">
+                    VerticalAlignment="Stretch"
+                    HorizontalScrollBarVisibility="Disabled">
         <ItemsControl Items="{Binding SortedFilteredGroupChats}">
           <ItemsControl.ItemsPanel>
             <ItemsPanelTemplate>
