Fixed issue where images would be displayed too large

--- a/GroupMeClientAvalonia/Views/Controls/Attachments/GroupMeImageAttachmentControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/Attachments/GroupMeImageAttachmentControl.xaml
@@ -12,10 +12,10 @@
 
   <Border BorderThickness="8" BorderBrush="White">
     <Grid>
-      <!--StretchDirection="DownOnly"-->
       <!--gif:AnimationBehavior.SourceStream="{Binding ImageAttachmentStream}"-->
       <Image MaxWidth="500"
              MaxHeight="600"
+             StretchDirection="DownOnly"
              Stretch="Uniform"
              HorizontalAlignment="Left"
              UseLayoutRounding="True"
