--- a/GroupMeClientAvalonia/Views/Controls/Attachments/ImageLinkAttachmentControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/Attachments/ImageLinkAttachmentControl.xaml
@@ -7,9 +7,9 @@
              xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
              xmlns:microcube="clr-namespace:MicroCubeAvalonia.Controls;assembly=MicroCubeAvalonia"
              mc:Ignorable="d" d:DesignWidth="200" d:DesignHeight="200"
-             Background="White">
+             Background="{DynamicResource ThemeBackgroundBrush}">
   
-  <Border BorderThickness="8" BorderBrush="White">
+  <Border BorderThickness="8" BorderBrush="{DynamicResource ThemeBackgroundBrush}">
     <Grid>
       <!--gif:AnimationBehavior.SourceStream="{Binding ImageAttachmentStream}"-->
       <Image MaxWidth="500"
